pxc/tests/test_19_thread/thrtest3.px

namespace ttest;
import thread "";
import io;

struct my_thread_obj(int x0, int y0, io::ioptr const& io0) {
  int x = x0;
  int y = y0;
  io::ioptr io = io0;
  function void main() {
    io.stdout_println("my thread main");
    io.stdout_println(x);
  }
}

thread_t thr = create_thread(my_thread_obj(123, 456, io::main));
  // error: my_thread_obj is not threaded
thr.join();

